--- a/setting/docker-compose.yml
+++ b/setting/docker-compose.yml
@@ -40,9 +40,9 @@ services:
     image: nginx:latest  # 사용할 Docker 이미지
     container_name: seeat-nginx
     volumes:
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - /letsencrypt/certbot/conf:/etc/letsencrypt
-      - /letsencrypt/certbot/www:/var/www/certbot
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     ports:
       - 80:80
       - 443:443
@@ -57,8 +57,8 @@ services:
     container_name: seeat-certbot
     restart: unless-stopped
     volumes:
-      - /letsencrypt/certbot/conf:/etc/letsencrypt
-      - /letsencrypt/certbot/www:/var/www/certbot
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     depends_on:
       - nginx
     networks:
