--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // 시큐리티
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    // OCR
+    implementation("com.googlecode.json-simple:json-simple:1.1.1")
+
     // 테스트 관련 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
