--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,13 @@ dependencies {
     // DB 의존성
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    runtimeOnly 'com.h2database:h2'
+    // runtimeOnly 'com.h2database:h2'
 
     // 시큐리티
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    //Oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     // 테스트 관련 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
