--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     // DB 의존성
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    // runtimeOnly 'com.h2database:h2'
+    testImplementation 'com.h2database:h2'
 
     // 시큐리티
     implementation 'org.springframework.boot:spring-boot-starter-security'
