--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     testImplementation 'com.h2database:h2'
 
     // 시큐리티
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     //Oauth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
