🔨 chore : 개발용 docker-compose 레디스 추가

--- a/setting/docker-compose-dev.yml
+++ b/setting/docker-compose-dev.yml
@@ -14,3 +14,8 @@ services:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
 
+  redis:
+    image: redis:7.2.5
+    container_name: seeat-redis
+    ports:
+      - '6379:6379'
