--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -112,7 +112,19 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew clean build
 
-      # 3. JUnit 테스트 결과 게시
+      # 3. 테스트 커버리지
+      - name: Test Coverage Report
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.2
+        with:
+          title: Test Coverage Report
+          paths: ${{ github.workspace }}/build/jacoco/index.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-changed-files: 0
+          min-coverage-overall: 0
+          debug-mode: true
+
+      # 4. JUnit 테스트 결과 게시
       - name: Test 결과 출력
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
