--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -11,7 +11,7 @@ name: SEEAT dev CI-CD 파이프라인
 
 on:
   push:
-    branches: [ "develop","feat/CICD"]
+    branches: [ "develop","fix/swagger"]
 
 jobs:
   #1. 개발 서버 CI, Build 용
