--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,9 @@ dependencies {
     // OCR
     implementation("com.googlecode.json-simple:json-simple:1.1.1")
 
+    // S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
     // 테스트 관련 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
